tests/baselines/reference/TwoInternalModulesThatMergeEachWithExportedModulesOfTheSameName.errors.txt
TwoInternalModulesThatMergeEachWithExportedModulesOfTheSameName.ts(17,9): error TS2564: Property 'length' has no initializer and is not definitely assigned in the constructor.
TwoInternalModulesThatMergeEachWithExportedModulesOfTheSameName.ts(25,17): error TS2564: Property 'name' has no initializer and is not definitely assigned in the constructor.


==== TwoInternalModulesThatMergeEachWithExportedModulesOfTheSameName.ts (2 errors) ====
    namespace A.B {
        export var x: number;
    }
    
    namespace A{ 
        namespace B {
            export var x: string;
        }
    }
    
    // ensure the right var decl is exported
    var x: number;
    var x = A.B.x;
    
    namespace X.Y.Z {
        export class Line {
            length: number;
            ~~~~~~
!!! error TS2564: Property 'length' has no initializer and is not definitely assigned in the constructor.
        }
    }
    
    namespace X {
        export namespace Y {
            namespace Z {
                export class Line {
                    name: string;
                    ~~~~
!!! error TS2564: Property 'name' has no initializer and is not definitely assigned in the constructor.
                }
            }
        }
    }
    
    // make sure merging works as expected
    var l: { length: number };
    var l: X.Y.Z.Line;
    